deploy: 75405b8a927c4f301daa29b96bc25f466080eeca

--- a/notebooks/12_temporal_probability_models/index.html
+++ b/notebooks/12_temporal_probability_models/index.html
@@ -2,7 +2,7 @@
 layout: content
 metadata: notebooks_12_temporal_probability_models_metadata
 ---
-<h1>Temporal Probability Models</h1>
+<h1>Temporal Probability Models - Part 1</h1>
 <h2>Table of Contents</h2>
 <p><a href="#Introduction">Introduction</a></p>
 <p><a href="#What-is-a-Temporal-Probability-Model">What is a Temporal Probability Model?</a></p>
